fix button wrapping in toolbar

--- a/Compile.and.Load/src/Sigged.Repl.NetCore.Web/assets/css/_repl-ui.scss
+++ b/Compile.and.Load/src/Sigged.Repl.NetCore.Web/assets/css/_repl-ui.scss
@@ -53,8 +53,9 @@
     flex-direction: column;
 
     .repl-main-ide-toolbar {
-        padding: 5px 10px;
+        padding: 0 10px;
         z-index: 5;
+        overflow:hidden;
         height: 50px;
         width: 100%;
         background-color: #efefef;
@@ -62,6 +63,8 @@
         box-shadow: 0 0.25rem 0.75rem rgba(0, 0, 0, 0.05);
 
         .btn {
+            margin: 5px 0;
+            white-space:nowrap;
 
             &[disabled]{
                 opacity:0.3;
